demo/istio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
