demo/echo-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: echo-server
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo-server
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: echo-server
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: "30%"
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: echo-server
          image: kennethreitz/httpbin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # the port must be named after the underlying protocol 
      # otherwise the filter won't work
      name: http
      nodePort: 30111
  selector:
    app: echo-server
